--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-nft-marketplace",
+  "name": "kennel_club_nfts",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@apollo/client": "3.5.10",
+    "@web3uikit/icons": "^0.4.1",
     "graphql": "^16.4.0",
     "moralis": "^1.5.11",
     "moralis-v1": "^1.12.0",
-    "next": "12.1.5",
+    "next": "13.3.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-moralis": "^1.3.5",
